--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+MsiNewsBundle:
+    resource: "@MsiNewsBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 MsiMainBundle:
     resource: "@MsiMainBundle/Controller/"
     type:     annotation
